# rag

./: .gitignore  README.md
ollama/: README.md  values.yaml
rag-console/: Cargo.toml  build.sh
rag-console/src/: cli.rs  main.rs  screen.rs
rag-lib/: Cargo.toml
rag-lib/src/: agent.rs  ai.rs  candle.rs  helpers.rs  lib.rs  llama.rs  llama2.rs  rag.rs
rag-lib/src/docloader/: extractousloader.rs  mod.rs
rag-lib/src/llm/: languagemodel.rs  llama.rs  mod.rs
rag-lib/src/utilities/: configuration.rs  elasticsearchstore.rs  errors.rs  extractousloader.rs  macros.rs  mod.rs  reranker_wrapper.rs  shared_llm.rs  threatfox_tool.rs
rag-lib/src/vectorstore/: mod.rs  vectorstore.rs
scripts/: img-pdf-2-text.py  prep-unstructured-data.ipynb  prep-unstructured-data.py  requirements.txt
