[package]
name = "rag-console"
version = "0.1.0"
authors = ["Daniel Osei"]
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
futures-util = "0.3.31"
tokio = "1.45.1"
rag-lib = { path = "../rag-lib" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_yaml = "0.9.34"
serde = "1.0.219"
url = "2.5.4"
pulldown-cmark = "0.13.0"
console = "0.16.0"
termimad = "0.33.0"
