[package]
name = "rag-lib"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Osei"]

[dependencies]
async-trait = "0.1.80"
langchain-rust = { version= "4.6.0", features=["sqlite","fastembed","lopdf"]}
llama_cpp = {version="0.3.2",features=["cuda"]} 
serde_json = "1.0.117"
futures-util = "0.3.30"
colored = "3.0.0"
tokio = "1.45.1"
tokio-stream = "0.1.17"
